# thesis_orbslam

./: .gitignore  CMakeLists.txt  FrameTrajectory_KITTI_Format.txt  FrameTrajectory_TUM_Format.txt  kitti_eval.sh  playbag.sh  rosario_eval.sh  run_IMOW_stereo.sh  run_JUNO_adrichem_stereo.sh  run_JUNO_den_boer_stereo.sh  run_JUNO_stereo.sh  run_kitti_stereo.sh  run_rect_IMOW.sh  run_rect_Juno.sh  run_rect_flourish.sh  run_rect_rosario.sh  run_stereo_flourish.sh  run_stereo_rosario.sh
Examples/ROS/ORB_SLAM3/: CMakeLists.txt
Examples/ROS/ORB_SLAM3/src/: ros_stereo.cc
calib_files_own/: left_den_boer.yaml  left_imow.yaml  left_van_adrichem.yaml  right_den_boer.yaml  right_imow.yaml  right_van_adrichem.yaml
experiments/: evo_run.sh  kitti_to_tum.sh  orb.py  orbslam_matchingstats.py  parameters_test_ordered_nfeat_2000_RANSAC.xlsx  parameters_test_ordered_nfeat_2000_RANSAC_equalized.xlsx  pathdata (3rd copy).csv  pathdata (another copy).csv  pathdata (copy).csv  pathdata.csv  pathdata_02_smooth.csv  pathdata_denboer_noisy.csv  pathdata_denboer_smooth.csv  pathdata_feat.csv  pathdata_no_rect.csv  pathdata_norect_FAST_track.csv  pathdata_rectified.csv  run_orbmatcher.sh  run_orbmatcher_fromNAS.sh  settings_result.yaml  settings_result1.yaml  settings_test.py  settings_test_with_order.py  stats.txt  stats.yaml  test_setup.txt
include/: Frame.h  FrameDrawer.h  KeyFrame.h  LoopClosing.h  System.h  Tracking.h
src/: DatasetA.bag.html  Frame.cc  FrameDrawer.cc  KeyFrame.cc  LoopClosing.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  Settings.cc  System.cc  Tracking.cc  test.html  van_adrichem_mc0003_20220619_071337_after_rain.bag.html
tables/: FAST_tresh_effect.tgn  FAST_treshold_setting_equalized.tgn  desc_distance_thresh.tgn  euroc_settings.tgn  flourish_settings.tgn  imow_settings.tgn  juno_replica.tgn  juno_settings.tgn  main.cpp  nlevels_effect.tgn  nlevels_setting_equalized.tgn  nn_ratio.tgn  patch_thresh_effect.tgn  patchsize_setting_equalized.tgn  rosario_settings.tgn  scale_factor_effect.tgn  scalefactor_setting_equalized.tgn  (+4 more)
(+292 files in other folders)
